--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: scala
 
-matrix:
-  include:
-  - jdk: oraclejdk8
-    scala: 2.12.4
-  - jdk: oraclejdk7
-    scala: 2.10.7
+jdk: oraclejdk8
+
+scala: 2.12.4
 
 cache:
   directories:
