--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,4 +1,5 @@
 updates.pin  = [ 
-  { groupId = "co.fs2", version = "2." }
+  { groupId = "co.fs2", version = "2." },
+  { groupId = "org.typelevel", artifactId="cats-effect-laws", version = "2." },
   { groupId = "org.typelevel", artifactId="cats-effect", version = "2." }
 ]
